Corrections and Connections Update